--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,16 @@ jackson.version=2.9.2
 spring.version=5.1.4.RELEASE
 spring-cloud.version=2.1.2.RELEASE
 reactor.version=3.2.5.RELEASE
+h2.version=1.4.197
 
 lombok.version=1.18.4
 
 slf4j.version=1.7.25
 logback.version=1.2.3
 
+com.fasterxml.jackson.version=2.9.8
+
+hazelcast.version=3.11.1
 
 junit-jupiter.version=5.3.2
 hamcrest.version=1.3
