--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'org.spring.jobs.manager'
+group = 'org.jobs.manager'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
