--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ repositories {
 
 buildscript {
     repositories {
-        mavenCentral()
         maven { url 'https://plugins.gradle.org/m2' }
+        mavenCentral()
     }
     dependencies {
         classpath group: 'com.github.jengelman.gradle.plugins', name: 'shadow', version: '2.0.1'
@@ -22,6 +22,7 @@ subprojects {
     targetCompatibility = 1.8
 
     repositories {
+        maven { url "http://repo.spring.io/libs-milestone" }
         mavenCentral()
     }
 
