--- a/db/build.gradle
+++ b/db/build.gradle
@@ -1,6 +1,13 @@
 dependencies {
+//    implementation "org.springframework.data:spring-data-mongodb:2.2.0.M1"
+//    implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:${project['spring-cloud.version']}"
+//    implementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:${project['mongo.version']}"
+
     compile project(":common")
+
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: project['spring-cloud.version']
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: project['spring-cloud.version']
     runtimeOnly group: 'com.h2database', name: 'h2', version: project['h2.version']
+    
+    testCompile project(":common")
 }
