--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,10 @@ version=00.001.00
 jackson.version=2.9.2
 
 spring.version=5.1.4.RELEASE
-spring-cloud.version=2.1.2.RELEASE
+spring-cloud.version=2.1.3.RELEASE
 reactor.version=3.2.5.RELEASE
 h2.version=1.4.197
+mongo.version=2.2.0
 
 lombok.version=1.18.4
 
