--- a/common/src/test/resources/application.yml
+++ b/common/src/test/resources/application.yml
@@ -2,7 +2,6 @@ org:
   jobs:
     manager:
       paralelizm: 2
-      strategies:
-        - org.jobs.manager.stubs.TestTaskStrategyImpl
+      slots: 2
 
 
