--- a/db/build.gradle
+++ b/db/build.gradle
@@ -7,7 +7,8 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: project['spring-cloud.version']
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: project['spring-cloud.version']
-    runtimeOnly group: 'com.h2database', name: 'h2', version: project['h2.version']
+
+    compile group: 'com.h2database', name: 'h2', version: project['h2.version']
     
     testCompile project(":common")
 }
