--- a/db/src/main/resources/application.yml
+++ b/db/src/main/resources/application.yml
@@ -1,3 +1,13 @@
-org:
-  jobs:
-    manager:
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+debug: true
