--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ spring.version=5.1.4.RELEASE
 spring-cloud.version=2.1.3.RELEASE
 reactor.version=3.2.5.RELEASE
 h2.version=1.4.197
+r2dbc-h2.version=1.0.0.M7
 mongo.version=2.2.0
 
 lombok.version=1.18.4
