--- a/db/build.gradle
+++ b/db/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: project['spring-cloud.version']
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: project['spring-cloud.version']
 
-    compile group: 'com.h2database', name: 'h2', version: project['h2.version']
+    implementation group: 'com.h2database', name: 'h2', version: project['h2.version']
     
     testCompile project(":common")
 }
