--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -15,9 +15,10 @@ repositories {
 
 dependencies {
 
-    compile project(":cache")
     compile project(":db")
 
+    //implementation group: 'org.springframework.boot', name: 'spring-boot-starter-integration', version: project['spring-cloud.version']
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: project['spring-cloud.version']
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: project['spring-cloud.version']
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: project['spring-cloud.version']
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: project['spring-cloud.version']
