--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 8080
 
+
 org:
   jobs:
     manager:
       paralelizm: 2
       slots: 2
-      cache:
-        hosts:
-          - "localhost"
+logging:
+  level.: debug
